feat: swagger updates
